Added deep-learning functionality

--- a/Pipeline/Converter.ipynb
+++ b/Pipeline/Converter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -18,23 +18,23 @@
       "\n",
       "Found: Deployer.ipynb\n",
       "[NbConvertApp] Converting notebook Deployer.ipynb to script\n",
-      "[NbConvertApp] Writing 453 bytes to Deployer.py\n",
+      "[NbConvertApp] Writing 1248 bytes to Deployer.py\n",
       "\n",
       "Found: Simulator.ipynb\n",
       "[NbConvertApp] Converting notebook Simulator.ipynb to script\n",
-      "[NbConvertApp] Writing 1975 bytes to Simulator.py\n",
+      "[NbConvertApp] Writing 1990 bytes to Simulator.py\n",
       "\n",
       "Found: Trainer.ipynb\n",
       "[NbConvertApp] Converting notebook Trainer.ipynb to script\n",
-      "[NbConvertApp] Writing 4758 bytes to Trainer.py\n",
+      "[NbConvertApp] Writing 5480 bytes to Trainer.py\n",
       "\n",
       "Found: Watcher.ipynb\n",
       "[NbConvertApp] Converting notebook Watcher.ipynb to script\n",
-      "[NbConvertApp] Writing 2304 bytes to Watcher.py\n",
+      "[NbConvertApp] Writing 2688 bytes to Watcher.py\n",
       "\n",
       "Found: Production/Application.ipynb\n",
       "[NbConvertApp] Converting notebook Production/Application.ipynb to script\n",
-      "[NbConvertApp] Writing 1321 bytes to Production/Application.py\n"
+      "[NbConvertApp] Writing 1678 bytes to Production/Application.py\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
     "for file in (Path('.').glob(\"**/*.ipynb\")):\n",
     "    if(file.name.find(\"checkpoint\") == -1):\n",
     "        print(\"\\nFound: {0}\".format(file))\n",
-    "        !jupyter nbconvert --to script $file\n"
+    "        !jupyter nbconvert --to script $file"
    ]
   },
   {
