--- a/Pipeline/Deployer.ipynb
+++ b/Pipeline/Deployer.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-03-19 10:26:29.946945\n",
-      "Loading pipeline..\n",
-      "Saving pipeline in version control..\n",
-      "Saving pipeline in production..\n",
-      "pipeline deployed\n"
+      "\n",
+      "Deployer started\n",
+      "--------------------------------------\n",
+      "\n",
+      "2018-03-23 12:18:32.811609\n"
      ]
     }
    ],
    "source": [
     "from sklearn.externals import joblib\n",
+    "import dill\n",
+    "\n",
     "import os\n",
     "import pathlib\n",
     "import datetime\n",
@@ -28,15 +30,67 @@
     "print(\"\\nDeployer started\")\n",
     "print(\"--------------------------------------\\n\")\n",
     "print(version)\n",
-    "print(\"Loading pipeline..\")\n",
-    "model = joblib.load(\"pipeline.pkl\")\n",
+    "classicML = False\n",
+    "pipeline_name = 'pipeline'\n",
+    "model_name = 'model'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def savePipeline():\n",
+    "    print(\"Loading pipeline\")\n",
+    "    pipeline = joblib.load(\"pipeline.pkl\")\n",
+    "    print(\"pipeline loaded\")\n",
+    "    print(\"Saving pipeline in version control..\")      \n",
+    "    joblib.dump(pipeline, \"./versions/\"+ pipeline_name + version +\".pkl\")\n",
+    "    print(\"Saving pipeline in production..\")\n",
+    "    joblib.dump(pipeline, \"Production/\"+ pipeline_name + \".pkl\")\n",
+    "    print(\"pipeline deployed\")\n",
     "\n",
-    "print(\"Saving pipeline in version control..\")\n",
-    "joblib.dump(model, \"./versions/Pipeline_\"+ version +\".pkl\")\n",
-    "     \n",
-    "print(\"Saving pipeline in production..\")\n",
-    "joblib.dump(model, \"Production/pipeline.pkl\")\n",
-    "print(\"pipeline deployed\")"
+    "def saveDeepModel():\n",
+    "    from keras.models import load_model\n",
+    "    print(\"Loading model\")\n",
+    "    classifier = load_model(\"model.h5\")\n",
+    "    print(\"Model loaded\")\n",
+    "    print(\"Saving model in version control..\")\n",
+    "    classifier.save('versions/'+ model_name + version + '.h5')\n",
+    "    print(\"Model saved in version control\")\n",
+    "    print(\"Saving model in production..\")\n",
+    "    classifier.save('Production/' + model_name + '.h5')\n",
+    "    print(\"Model saved in production.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading pipeline\n",
+      "pipeline loaded\n",
+      "Saving pipeline in version control..\n",
+      "Saving pipeline in production..\n",
+      "pipeline deployed\n",
+      "Loading model\n",
+      "Model loaded\n",
+      "Saving model in version control..\n",
+      "Model saved in version control\n",
+      "Saving model in production..\n",
+      "Model saved in production.\n"
+     ]
+    }
+   ],
+   "source": [
+    "savePipeline()\n",
+    "if classicML == False:\n",
+    "    saveDeepModel()"
    ]
   },
   {
