--- a/Pipeline/Simulator.ipynb
+++ b/Pipeline/Simulator.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
     "        if(os.system(\"python Deployer.py\") == 0):\n",
     "            print(\"Deployment succesfull.\")\n",
     "            print(\"Running application test\")\n",
-    "           #os.system(\"python ./Production/Application.py\")\n",
+    "            os.system(\"python ./Production/Application.py\")\n",
     "        else:\n",
     "            print(\"Deployment failed.\")\n",
     "    else:\n",
@@ -86,16 +86,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train size is 2100\n",
+      "Train size is 8400\n",
       "Test size is 8400\n",
-      "Data has been split and saved as data.csv and test_data.csv\n"
+      "Data has been split and saved as data.csv and test_data.csv\n",
+      "\n",
+      "Starting trainer\n",
+      "\n",
+      "Executing watcher\n",
+      "\n",
+      "Executing deployer\n",
+      "Deployment succesfull.\n",
+      "Running application test\n",
+      "Train size is 16800\n",
+      "Test size is 8400\n",
+      "Data has been split and saved as data.csv and test_data.csv\n",
+      "\n",
+      "Starting trainer\n",
+      "\n",
+      "Executing watcher\n",
+      "\n",
+      "Executing deployer\n",
+      "Deployment succesfull.\n",
+      "Running application test\n",
+      "Train size is 25200\n",
+      "Test size is 8400\n",
+      "Data has been split and saved as data.csv and test_data.csv\n",
+      "\n",
+      "Starting trainer\n",
+      "\n",
+      "Executing watcher\n",
+      "\n",
+      "Executing deployer\n",
+      "Deployment succesfull.\n",
+      "Running application test\n",
+      "Train size is 33600\n",
+      "Test size is 8400\n",
+      "Data has been split and saved as data.csv and test_data.csv\n",
+      "\n",
+      "Starting trainer\n"
      ]
     }
    ],
@@ -107,16 +142,27 @@
     "        i+=step\n",
     "    \n",
     "\n",
-    "#for i in frange(0.4, 0.8, 0.2):\n",
-    "#    splitData(i, 0.2)\n",
-    "#    runPipeline()\n",
+    "for i in frange(0.2, 0.8, 0.2):\n",
+    "    splitData(i, 0.2)\n",
+    "    runPipeline()\n",
     "\n",
-    "splitData(0.05, 0.2)\n",
-    "#runPipeline()\n",
+    "splitData(1, 0)\n",
+    "runPipeline()\n",
     "\n",
     "#Run once more for final performance without test set\n",
     "#splitData(1, 0)\n",
     "#runPipeline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Hi\")"
    ]
   },
   {
