Added metric functionality and cleanup

--- a/Pipeline/Deployer.ipynb
+++ b/Pipeline/Deployer.ipynb
@@ -30,7 +30,7 @@
     "print(\"\\nDeployer started\")\n",
     "print(\"--------------------------------------\\n\")\n",
     "print(version)\n",
-    "classicML = False\n",
+    "classicML = True\n",
     "pipeline_name = 'pipeline'\n",
     "model_name = 'model'"
    ]
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def savePipeline():\n",
