--- a/Pipeline/Production/Application.ipynb
+++ b/Pipeline/Production/Application.ipynb
@@ -129,10 +129,10 @@
     "\n",
     "import subprocess\n",
     "\n",
-    "command = \"kaggle competitions submit -c digit-recognizer -f ./Production/Results.csv -m \\\"XGBoost_with_scaling_amount_of_training_data\\\"\"\n",
+    "command = \"kaggle competitions submit -c digit-recognizer -f Results.csv -m \\\"ANN_with_scaling_amount_of_training_data\\\"\"\n",
     "\n",
     "process = subprocess.Popen(command.split(), stdout=subprocess.PIPE)\n",
-    "output, error = process.communicate()\n",
+    "#output, error = process.communicate()\n",
     "print(output)\n",
     "print(\"Predictions submitted to kaggle\")"
    ]
@@ -148,19 +148,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: kaggle in /opt/conda/lib/python3.6/site-packages\n",
+      "Requirement already satisfied: certifi in /opt/conda/lib/python3.6/site-packages (from kaggle)\n",
+      "Requirement already satisfied: python-dateutil in /opt/conda/lib/python3.6/site-packages (from kaggle)\n",
+      "Requirement already satisfied: six>=1.10 in /opt/conda/lib/python3.6/site-packages (from kaggle)\n",
+      "Requirement already satisfied: urllib3>=1.15 in /opt/conda/lib/python3.6/site-packages (from kaggle)\n",
+      "\u001b[33mYou are using pip version 9.0.1, however version 9.0.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "mkdir: cannot create directory ‘/root/.kaggle’: File exists\n",
+      ".  ..  kaggle.json\n"
+     ]
+    }
+   ],
    "source": [
     "# #Use these commands after initiating docker to setup the tools required for kaggle api usage\n",
     "#!pip install kaggle\n",
     "#!mkdir /root/.kaggle\n",
-    "#!cp ./kaggle.json /root/.kaggle/kaggle.json"
+    "#!cp ./kaggle.json /root/.kaggle/kaggle.json\n",
+    "\n",
+    "#If output file contains kaggle.json the operation was succesfull\n",
+    "#!ls -a /root/.kaggle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -171,9 +190,7 @@
      ]
     }
    ],
-   "source": [
-    "#!ls -a /root/.kaggle"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
