--- a/Pipeline/Simulator.ipynb
+++ b/Pipeline/Simulator.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -28,8 +28,8 @@
     "import numpy as np\n",
     "\n",
     "def splitData(Trainsize, Testsize):\n",
-    "    if (float(Trainsize) + Testsize) > 1:\n",
-    "        raise NameError('Trainsize + Testsize can not be bigger than 1!')\n",
+    "    #if (float(Trainsize) + Testsize) > 1:\n",
+    "        #raise NameError('Trainsize + Testsize can not be bigger than 1!')\n",
     "    #Enter data\n",
     "    count = 42000\n",
     "    trainsize = Trainsize #As percentage. Example: 25% should be entered as 0.25\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
     "        if(os.system(\"python Deployer.py\") == 0):\n",
     "            print(\"Deployment succesfull.\")\n",
     "            print(\"Running application test\")\n",
-    "            os.system(\"python ./Production/Application.py\")\n",
+    "            #os.system(\"python ./Production/Application.py\")\n",
     "        else:\n",
     "            print(\"Deployment failed.\")\n",
     "    else:\n",
@@ -86,51 +86,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train size is 8400\n",
-      "Test size is 8400\n",
-      "Data has been split and saved as data.csv and test_data.csv\n",
-      "\n",
-      "Starting trainer\n",
-      "\n",
-      "Executing watcher\n",
-      "\n",
-      "Executing deployer\n",
-      "Deployment succesfull.\n",
-      "Running application test\n",
-      "Train size is 16800\n",
-      "Test size is 8400\n",
-      "Data has been split and saved as data.csv and test_data.csv\n",
-      "\n",
-      "Starting trainer\n",
-      "\n",
-      "Executing watcher\n",
-      "\n",
-      "Executing deployer\n",
-      "Deployment succesfull.\n",
-      "Running application test\n",
-      "Train size is 25200\n",
-      "Test size is 8400\n",
-      "Data has been split and saved as data.csv and test_data.csv\n",
-      "\n",
-      "Starting trainer\n",
-      "\n",
-      "Executing watcher\n",
-      "\n",
-      "Executing deployer\n",
-      "Deployment succesfull.\n",
-      "Running application test\n",
       "Train size is 33600\n",
       "Test size is 8400\n",
       "Data has been split and saved as data.csv and test_data.csv\n",
       "\n",
-      "Starting trainer\n"
+      "Starting trainer\n",
+      "\n",
+      "Executing watcher\n",
+      "Model did not pass the test, aborting.\n"
      ]
     }
    ],
@@ -141,13 +113,10 @@
     "        yield i\n",
     "        i+=step\n",
     "    \n",
-    "\n",
-    "for i in frange(0.2, 0.8, 0.2):\n",
+    "#0.001, 0.003, 0.005, 0.011, 0.02, 0.1, 0.2, 0.4, 0.6,\n",
+    "for i in [0.8]:\n",
     "    splitData(i, 0.2)\n",
     "    runPipeline()\n",
-    "\n",
-    "splitData(1, 0)\n",
-    "runPipeline()\n",
     "\n",
     "#Run once more for final performance without test set\n",
     "#splitData(1, 0)\n",
